# aquariLLM

./: .gitignore  Cargo.toml  flake.nix
src/: action.rs  agent.rs  environment.rs  main.rs
