[package]
name = "aquariLLM"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = "0.2.4"
rand = "0.8.5"
anyhow = "1.0.95"
schemars = { version = "0.8.21", features = ["preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
faker_rand = "0.1.1"
signalbool = "0.2.5"
solana-sdk = "2.1.11"
solana-client = "2.1.11"

